--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang=en>
 <meta charset=utf-8>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>█ Unredacted Word</title>
+<title>Unredacted Word</title>
 <link rel="stylesheet" href="index.css">
 <body class="aesthetics" contenteditable="true">
 
