--- a/index.html
+++ b/index.html
@@ -7,4 +7,4 @@
 <body class="aesthetics" contenteditable="true">
 
 <p class="centered">
-█ Unredacted <s>Word</s>: publisher of words, code &amp; data.
+<span class="cursor">█</span> Unredacted <s>Word</s>: publisher of words, code &amp; data.
