added mission/catalog/sales info

--- a/index.html
+++ b/index.html
@@ -4,7 +4,66 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>█ Unredacted Word</title>
 <link rel="stylesheet" href="index.css">
-<body class="aesthetics" contenteditable="true">
+<body>
 
-<p class="centered">
-█ Unredacted <s>Word</s>: publisher of words, code &amp; data.
+<div class="aesthetics" contenteditable="true">
+  <p class="centered">
+  █ Unredacted <s>Word</s>: publisher of words, code &amp; data.
+  </p>
+</div>
+
+<h2>Mission</h2>
+<p>
+We are an affinity group of responsible people who take pride in our
+work and take our lives seriously. We share the goal of a transformation of society,
+so we can live without the state, without classes, with mutual reciprocity,
+voluntary cooperation, and freedom of desire.
+
+<p>
+We believe that success is not measured by monetary wealth or position within a
+hierarchy; but by the quality of our association amongst equals and by our measure
+of self-actualization.
+
+<p>
+We believe that the best way to create positive change is with care of ourselves,
+our families, our partners, and each other. We aim for a sustainable approach to
+work and life, because that is the best way to maximize long-term meaning,
+while retaining clarity of vision.
+
+<p>
+We are fully aware of the contradictions of our participation in consumer culture,
+the spectacle, self-promotion, and capitalism. We maintain the resolve that the
+act of publishing physical books at a fair price, and providing digital copies for
+free– is a fair compromise. We believe that the book is an object of art,
+one to inspire contemplation, as such— our printed editions are high quality,
+very limited print runs in order to subsidize the cost of providing
+“gratis libre” digital editions: without cost, and without copy restriction.
+
+<p>
+Our mission is to create worthwhile things that might last; and give them back to
+like-minded Others.
+
+
+<h2>Catalog</h2>
+
+<ol>
+  <li>The Society of the Spectacle, ~2020 (forthcoming), Guy Debord, 0xADADA</li>
+  <li><s>Transcendence and Irrationality: A.I. at the End of The Enlightenment</s> 2016, 0xADADA</li>
+  <li><s>Prescient Modernism: The Dialectic Paradigm of Joris-Karl Huysmans</s> 2013, Charles V. Hammond</li>
+  <li><s>Occupy Nothing: the Emergence of the Multitude in Late Capitalism</s> 2011, S.H. la Fournier</li>
+</ol>
+
+
+<h2>Sales</h2>
+
+<p>
+We are able to send our goods directly to you, as ebooks, web books, and print
+copies. We very much hope that you will buy directly from us whenever possible, and
+we will do our very best to make sure that you receive them in the way that you
+need, as quickly as possible.
+
+<p>
+  <a href="mailto:enquiries@unredacted-word.pub" title="Email">Email</a>
+  <a href="mailto:submissions@unredacted-word.pub" title="Submissions">Submissions</a>
+  <a href="mailto:retailers@unredacted-word.pub" title="Retail and wholesale orders">Retail and wholesale orders</a>
+  <a href="mailto:orders@unredacted-word.pub" title="Orders">Online orders</a>
