--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="index.css">
 <body>
 
-<div class="aesthetics" contenteditable="true">
+<div class="aesthetics fullbleed" contenteditable="true">
   <p class="centered">
     <span class="cursor">█</span>
     Unredacted <s>Word</s>: publisher of words, code &amp; data.
@@ -47,8 +47,12 @@ like-minded Others.
 
 <h2>Catalog</h2>
 
+<h3 class="dark fullbleed titlecard">
+  The Society of the Spectacle
+</h3>
+
 <ol>
-  <li>The Society of the Spectacle, ~2020 (forthcoming), Guy Debord, 0xADADA</li>
+  <li><em>The Society of the Spectacle</em>, ~2020 (forthcoming), Guy Debord, 0xADADA</li>
 </ol>
 
 
